--- a/WebApp/Views/MyHealth/PartialLifeStyle.cshtml
+++ b/WebApp/Views/MyHealth/PartialLifeStyle.cshtml
@@ -25,6 +25,8 @@
                                         $('#lfs' + "@j").prop('checked', true);
                                         //($(this).prop("checked")?)
                                     }
+                                    else
+                                    { $('#lfs' + "@j").prop('checked', false);}
 
                                 </script>
                             </label>
