family history checkbox issues resolved

--- a/WebApp/Views/MyHealth/PartialLifeStyle.cshtml
+++ b/WebApp/Views/MyHealth/PartialLifeStyle.cshtml
@@ -47,7 +47,8 @@
 }
 <!-- Datatables -->
 <script>
-      $(document).ready(function() {
+    $(document).ready(function() {
+        /*
         var handleDataTableButtons = function() {
           if ($("#datatable-buttons").length) {
             $("#datatable-buttons").DataTable({
@@ -122,7 +123,7 @@
           });
         });
 
-        TableManageButtons.init();
+        TableManageButtons.init();*/
       });
 </script>
 <!-- /Datatables -->
