--- a/WebApp/Views/MyHealth/Index.cshtml
+++ b/WebApp/Views/MyHealth/Index.cshtml
@@ -438,141 +438,8 @@
 <!--Family History-->
 <script type="text/javascript">
 
-    $(document).ready(function () {
-        //$('input').iCheck('check', function(){
-        //    alert('Well done, Sir');
-        //});
-
-          $("#btnAdd").click(function () {
-
-            if ($("#nametxt").val() == "" && $("#Relationship option:selected").text()!="Relationship") {
-
-                document.getElementById("divfhx").style.display = "block";
-                document.getElementById("divrel").style.display = "none";
-                return;
-            }
-            if ($("#nametxt").val() != "" && $("#Relationship option:selected").text()=="Relationship") {
-
-                document.getElementById("divfhx").style.display = "none";
-                document.getElementById("divrel").style.display = "block";
-                return;
-            }
-            if ($("#nametxt").val() == "" && $("#Relationship option:selected").text()=="Relationship") {
-
-                document.getElementById("divfhx").style.display = "block";
-                document.getElementById("divrel").style.display = "block";
-                return;
-            }
-            if ($("#nametxt").val() == "") {
-
-                document.getElementById("divfhx").style.display = "block";
-                return;
-            }
-            if($("#Relationship option:selected").text()=="Relationship") {
-
-                document.getElementById("divrel").style.display = "block";
-                return;
-            }
-
-
-            document.getElementById("divfhx").style.display = "none";
-            document.getElementById("divrel").style.display = "none";
-                var objFamilyHX = {};
-                objFamilyHX["patientID"]=@SessionHandler.UserInfo.Id;
-                objFamilyHX["name"]=$("#nametxt").val();
-                if($("#Relationship option:selected").text()=="Relationship")
-                {
-                    objFamilyHX["relationship"]="";
-                }
-                else
-                {
-                    objFamilyHX["relationship"]=$("#Relationship option:selected").text();
-                }
-
-                var _objFHX=objFamilyHX;
-                addFamilyHX(_objFHX);
-
-        });
-    });
-    $(function() {
-
-
-       
-        $('input').on('ifToggled', function(event){
-           
-            if($("#"+this.id).prop('checked') == false)
-            {
-                if (confirm("Are you sure you want to delete?")) {
-                    showLoader();
-                    var delfhxID = this.name.replace(/[^0-9]/g, '');
-                    var delrelID=this.id.replace(/[^0-9]/g, '');
-                    var cUrl = "@Url.Action("deleteFamilyHX", "MyHealth")?fhxID=" + delfhxID;
-                    $.post(cUrl, function (oResp) {
-                        if (oResp.message == "") {
-                            //reloadContainer(function () {
-                            new PNotify({ title: 'Success', text: 'Family History is deleted successfully.', type: 'success', styling: 'bootstrap3' });
-                            $("#UR"+delrelID).val($("#UR"+delrelID+ " option:first").val());
-                            stopLoader();
-                            //});
-                        } else {
-                            new PNotify({ title: 'Error', text: oResp.message, type: 'error', styling: 'bootstrap3' });
-                            stopLoader();
-                        }
-
-                    });
-                    return;
-                }
-                else
-                {
-
-                    $('#' + this.id).iCheck('toggle');
-                }
-            }
-            else
-            {
-               
-                var fhxID = this.name.replace(/[^0-9]/g, '');
-                var name = this.name.replace(/[0-9]/g, '');
-                var relID=this.id.replace(/[^0-9]/g, '');
-                if(fhxID!=0)
-                {
-                    var objFHX = {};
-                    objFHX["patientID"]=@SessionHandler.UserInfo.Id;
-                    objFHX["name"]=name;
-                    //objFHX["relationship"]="";
-                    if($("#UR"+relID+" option:selected").text()=="Relationship")
-                    {
-                        objFHX["relationship"]="";
-                    }
-                    else
-                    {
-                        objFHX["relationship"]=$("#UR"+chkid+" option:selected").text();
-                    }
-                    $("#UR"+relID+" option").prop('disabled', false);
-                    restore(objFHX);
-                }
-                if(fhxID==0)
-                {
-                    var objFHX = {};
-                    objFHX["patientID"]=@SessionHandler.UserInfo.Id;
-                    objFHX["name"]=name;
-
-                    if($("#UR"+relID+" option:selected").text()=="Relationship")
-                    {
-                        objFHX["relationship"]="";
-                    }
-                    else
-                    {
-                        objFHX["relationship"]=$("#UR"+relID+" option:selected").text();
-                    }
-                    var _objFHXX=objFHX;
-                    $("#UR"+relID+" option").prop('disabled', false);
-                    addFamilyHX(_objFHXX);
-                }
-            }
-
-        });
-    });
+  
+    
     function addFamilyHX(_objFHX)
     {
         //Start displaying loader
@@ -703,7 +570,10 @@
    
     function reloadContainer(callback) {
         $("#divResultContainer").load('@Url.Action("PartialFamilyHX", "MyHealth")', function () {
-             callback();
+            callback();
+            $('#patientFamilyHX input').iCheck({
+                checkboxClass: 'icheckbox_flat-green'
+            });
         });
 
 
