--- a/WebApp/Views/Appointment/PartialPending.cshtml
+++ b/WebApp/Views/Appointment/PartialPending.cshtml
@@ -75,47 +75,7 @@ else
 <!-- Datatables -->
 <script>
       $(document).ready(function() {
-        var handleDataTableButtons = function() {
-          if ($("#datatable-buttons").length) {
-            $("#datatable-buttons").DataTable({
-              dom: "Bfrtip",
-              buttons: [
-                {
-                  extend: "copy",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "csv",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "excel",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "pdfHtml5",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "print",
-                  className: "btn-sm"
-                },
-              ],
-              responsive: true
-            });
-          }
-        };
-
-        TableManageButtons = function() {
-          "use strict";
-          return {
-            init: function() {
-              handleDataTableButtons();
-            }
-          };
-        }();
-
-       
+               
         $('#datatablepending').dataTable({
             'order': [[1, 'desc']],
             columnDefs: [
@@ -140,16 +100,7 @@ else
           fixedHeader: true
         });
 
-        var $datatable = $('#datatable-checkbox');
-
         
-        $datatable.on('draw.dt', function() {
-          $('input').iCheck({
-            checkboxClass: 'icheckbox_flat-green'
-          });
-        });
-
-        TableManageButtons.init();
       });
 </script>
 <!-- /Datatables -->
@@ -258,4 +209,45 @@ else
         //});
     });
 </script>
+
+<script>
+    $(document).ready(function () {
+       
+        $(".pendingviewdetail").click(function () {
+            //alert($("#pvcid").val());
+            //debugger;
+            var $buttonClicked = $(this);
+            var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
+            var docid = $buttonClicked.attr('data-id');
+            var appID = $buttonClicked.attr('id');
+            //$('#myModalContent').html(data);
+            //$('#myModal4').modal('show');
+            //$("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")', function () {
+            //callback();
+            //});
+            //$('#myModal4').modal('show');
+
+            reloadModelContainer(function ()
+            {
+                var $modal = $('#myModal4');
+                $editappid = $modal.find('#editappid');
+                $doctorid = $modal.find('#doctorid');
+                $editappid.val(appID);
+                $doctorid.val(docid);
+                if($("#pvcid").val()!=0)
+                {
+                    $cc = $modal.find('#cc');
+                    $cc.show();
+                }
+
+                //Stop displaying loader
+                //stopLoader();
+
+            });
+
+        });
+
+
+    });
+</script>>
 
