--- a/WebApp/Views/Appointment/PartialReschedule.cshtml
+++ b/WebApp/Views/Appointment/PartialReschedule.cshtml
@@ -44,7 +44,7 @@ else
                                     @*<a href='#' data-toggle="modal" class="thumbnail-col-inner" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4"
             data-todo='{"appID":"@item.appID","appDateTime":"@item.appDate@item.appTime","rov":"@item.rov","chiefComplaints":"@item.chiefComplaints","amount":"@item.paymentAmount","pharmacy":"@item.pharmacy"
             ,"cellPhone":"@item.cellphone"}'>View Detail</a>*@
-                                <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
+                                <li><a href="#" data-toggle="modal" class="thumbnail-col-reschedule" data-id="@item.doctorID" id="@item.appID" data-target="#myModal4" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
                                 
                                 <li><a href="#" class="reschedule" data-id="@item.appDate" data-toggle="modal" data-target="#myModal1" data-todo='{"docid":"@item.doctorID","doctorName":"@item.DoctorName","appID":"@item.appID","appDate":"@item.appDate"}' onclick=showDoctorTimings(@item.doctorID,@item.appID,'@item.appDate') id="@item.doctorID">Reschedule App</a></li>
                                 <li><input type="text" style="display:none" id="apptype" value="R"></li>
@@ -62,45 +62,7 @@ else
 <!-- Datatables -->
 <script>
       $(document).ready(function() {
-        var handleDataTableButtons = function() {
-          if ($("#datatable-buttons").length) {
-            $("#datatable-buttons").DataTable({
-              dom: "Bfrtip",
-              buttons: [
-                {
-                  extend: "copy",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "csv",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "excel",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "pdfHtml5",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "print",
-                  className: "btn-sm"
-                },
-              ],
-              responsive: true
-            });
-          }
-        };
-
-        TableManageButtons = function() {
-          "use strict";
-          return {
-            init: function() {
-              handleDataTableButtons();
-            }
-          };
-        }();
+          
 
         //$('#rescheduledatatable').dataTable();
         $('#rescheduledatatable').dataTable({
@@ -129,20 +91,40 @@ else
 
         var $datatable = $('#datatable-checkbox');
 
-        //$datatable.dataTable({
-        //  'order': [[ 1, 'asc' ]],
-        //  'columnDefs': [
-        //    { orderable: false, targets: [0] }
-        //  ]
-        //});
-        $datatable.on('draw.dt', function() {
-          $('input').iCheck({
-            checkboxClass: 'icheckbox_flat-green'
-          });
-        });
-
-        TableManageButtons.init();
+        
       });
 </script>
 <!-- /Datatables -->
+<script>
+    $(document).ready(function () {
+        $(".thumbnail-col-reschedule").click(function () {
+
+            debugger;
+            var $buttonClicked = $(this);
+            var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
+            var docid = $buttonClicked.attr('data-id');
+            var appID = $buttonClicked.attr('id');
+            //$('#myModalContent').html(data);
+            //$('#myModal4').modal('show');
+            //$("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")', function () {
+            //callback();
+            //});
+            //$('#myModal4').modal('show');
+
+            reloadModelContainer(function () {
+                var $modal = $('#myModal4');
+                $editappid = $modal.find('#editappid');
+                $doctorid = $modal.find('#doctorid');
+                $editappid.val(appID);
+                $doctorid.val(docid);
+                //Stop displaying loader
+                //stopLoader();
+
+            });
+
+        });
+
+
+    });
+</script>>
 
