--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -66,45 +66,7 @@ else
 <!-- Datatables -->
 <script>
       $(document).ready(function() {
-        var handleDataTableButtons = function() {
-          if ($("#datatable-buttons").length) {
-            $("#datatable-buttons").DataTable({
-              dom: "Bfrtip",
-              buttons: [
-                {
-                  extend: "copy",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "csv",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "excel",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "pdfHtml5",
-                  className: "btn-sm"
-                },
-                {
-                  extend: "print",
-                  className: "btn-sm"
-                },
-              ],
-              responsive: true
-            });
-          }
-        };
-
-        TableManageButtons = function() {
-          "use strict";
-          return {
-            init: function() {
-              handleDataTableButtons();
-            }
-          };
-        }();
+        
 
        // $('#datatable').dataTable();
         $('#datatable').dataTable({
@@ -132,7 +94,7 @@ else
           fixedHeader: true
         });
 
-        var $datatable = $('#datatable-checkbox');
+       
        
         //$datatable.dataTable({
         //  'order': [[ 1, 'desc' ]],
@@ -141,15 +103,43 @@ else
              
         //  ]
         //});
-        $datatable.on('draw.dt', function() {
-          $('input').iCheck({
-            checkboxClass: 'icheckbox_flat-green'
-          });
-        });
+        
 
-        TableManageButtons.init();
+        
       });
 </script>
 <!-- /Datatables -->
+<script>
+    $(document).ready(function () {
+        $(".thumbnail-col-inner").click(function () {
+
+            debugger;
+            var $buttonClicked = $(this);
+            var AppDetailPostBackURL = '/Appointment/ViewAppDetails';
+            var docid = $buttonClicked.attr('data-id');
+            var appID = $buttonClicked.attr('id');
+            //$('#myModalContent').html(data);
+            //$('#myModal4').modal('show');
+            //$("#myModalContent").load('@Url.Action("ViewAppDetails", "Appointment")', function () {
+            //callback();
+            //});
+            //$('#myModal4').modal('show');
+
+            reloadModelContainer(function () {
+                var $modal = $('#myModal4');
+                $editappid = $modal.find('#editappid');
+                $doctorid = $modal.find('#doctorid');
+                $editappid.val(appID);
+                $doctorid.val(docid);
+                //Stop displaying loader
+                //stopLoader();
+
+            });
+
+        });
+
+
+    });
+    </script>>
 
 
