--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -54,7 +54,7 @@ else
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-right" style="width:15%">
-                                    <li><a href="#" data-toggle="modal" class="thumbnail-col-inner" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
+                                    <li><a href="#" data-toggle="modal" class="thumbnail-pending" data-id="@item.appID" id="@item.doctorID" data-target="#myModal5" onclick=$("#pvappid").val(@item.appID);>View Detail</a></li>
 
                                     <li><a href="#" class="preschedule" data-id="@item.doctorID" id="@item.appID">Reschedule Req</a></li>
                                     <li><a href="#" onclick="callConsult(@consultId,@item.appID)">Complete Consult</a></li>
@@ -349,7 +349,7 @@ else
 
 <script>
     $(function () {
-        $(".thumbnail-col-inner").click(function () {
+        $(".thumbnail-pending").click(function () {
             //debugger;
             var $buttonClicked = $(this);
             var AppDetailPostBackURL = '/DoctorAppointment/ViewAppDetails';
@@ -361,10 +361,12 @@ else
                 $doctorid = $modal.find('#doctorid');
                 $reditappointment = $modal.find('#reditappointment');
                 $ueditappointment = $modal.find('#ueditappointment');
+                $appType = $modal.find('#appType');
                 $reditappointment.show();
                 $ueditappointment.hide();
                 $editappid.val(id);
                 $doctorid.val(docid);
+                $appType.val('P');
                 if ($("#consultid").val() != 0) {
                     $ceditappointment = $modal.find('#ceditappointment');
                     $ceditappointment.show();
