--- a/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorViewAppDetail.cshtml
@@ -108,11 +108,12 @@
                     @*<label style="font-weight: 300;" for="">Please enter the number we should call</label>
                         <input type="text" placeholder="(469)237-3768" style="max-width: 100%;" class="form-control" />*@
                     <div class="m-t-10">
-                        <button id="ueditappointment" onclick=usendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Reschedule Request</button>
+                        <button id="ueditappointment" onclick=reschedulefromViewDetail($("#appType").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Reschedule Request</button>
                         <button id="reditappointment" onclick=rsendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Cancel Reschedule</button>
                         <button id="ceditappointment" onclick=csendVariables($("#doctorid").val(),$("#editappid").val(),this) style="width: 100%; border-radius: 0; padding: 15px 5px; font-size: 20px; display:none" type="button" class="btn btn-primary">Complete Consult</button>
                         <input type="text" style="display:none" id="editappid">
                         <input type="text" style="display:none" id="doctorid">
+                        <input type="text" style="display:none" id="appType">
                         @*<button style="width: 100%; border-radius: 0; background: #2AAC39; color: #fff; padding: 15px 5px; font-size: 20px;" class="btn" type="button">ACCEPT</button>
                             <button style="width: 100%; border-radius: 0; background: #DB0029; color: #fff; padding: 15px 5px; font-size: 20px;" class="btn" type="button">DECLINE</button>*@
                     </div>
