Added Health Care Team

--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -120,6 +120,9 @@
                                 <li class="doctor">
                                     <a href="@Url.Action("SeeDoctor", "SeeDoctor")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">See a doctor</span> </a>
                                 </li>
+                                <li class="doctor">
+                                    <a href="@Url.Action("Index", "HealthCareTeam")"><img src="~/Content/images/icon_doc_search.png" alt="">  &nbsp <span class="menu-txt">Health Care Team</span> </a>
+                                </li>
                                 <li class="appointment">
                                     <a href="@Url.Action("Index","Consultation")"><img src="~/Content/images/history.png" alt=""> &nbsp <span class="menu-txt"> Consult History</span></a>
 
